--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MATIC Casino",
-  "name": "MATIC Casino",
+  "short_name": "NFT Raffle ",
+  "name": "NFT Raffle",
   "icons": [
     {
       "src": "favicon.ico",
