Add placeholder to hide website

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NFT Raffle ",
-  "name": "NFT Raffle",
+  "short_name": "Lucky Kitaro Placeholder ",
+  "name": "Lucky Kitaro Placeholder",
   "icons": [
     {
       "src": "favicon.ico",
